# ChangeLog for net-analyzer/nagios
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios/ChangeLog,v 1.25 2005/09/28 18:22:52 ramereth Exp $

*nagios-2.0b_p4 (28 Sep 2005)

  28 Sep 2005; Lance Albertson <ramereth@gentoo.org> metadata.xml,
  +nagios-2.0b_p4.ebuild:
  * revbump for 2.0b_p4
  * updated metadata.xml

  06 Aug 2005; Chris White <chriswhite@gentoo.org> nagios-2.0b_p1.ebuild,
  nagios-2.0b_p2.ebuild:
  Got rid of strange tmp directory, adjusted the 2.0* ebuild's descriptions to
  match 1.2's with permission of dragonheart. Fixes bug #101517. Fixed header
  issues for 1.2.

  24 Feb 2005; Daniel Black <dragonheart@gentoo.org> nagios-2.0b_p1.ebuild,
  +nagios-2.0b_p2.ebuild:
  Version bump as per bug #83116. Thanks to Allen Parker <allenp@efn.org>

*nagios-2.0b_p1 (15 Feb 2005)

  15 Feb 2005; Daniel Black <dragonheart@gentoo.org> +nagios-2.0b_p1.ebuild:
  Version bump ebuild as per bug #81826 thanks to Marco Morales 
  <soulse@gmail.com>

  24 Oct 2004; Jason Wever <weeve@gentoo.org> nagios-1.2.ebuild:
  Stable on sparc.

  23 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-1.2.ebuild:
  Added meta ebuild notice in pkg_postrm. Closes #30469.

  05 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-1.2.ebuild:
  x86 marked stable

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> nagios-1.1.ebuild,
  nagios-1.2.ebuild:
  added missing IUSE

*nagios-1.2 (21 Mar 2004)

  21 Mar 2004; Michael Boman <mboman@gentoo.org> :
  Version-bumped the Nagios meta package.

  18 Feb 2004; Martin Holzer <mholzer@gentoo.org> nagios-1.1.ebuild:
  removing einfo since this is done in nagios-core

  02 Feb 2004; Martin Holzer <mholzer@gentoo.org> nagios-1.1.ebuild:
  correcting einfo package.

  14 Jul 2003; Patrick Kursawe <phosphan@gentoo.org> :
  You forgot to close bug 23564 :-)

  12 Jul 2003; Robin H. Johnson <robbat2@gentoo.org> files/digest-nagios-1.0