@@ -1,6 +1,14 @@
 # ChangeLog for net-analyzer/nagios
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios/ChangeLog,v 1.25 2005/09/28 18:22:52 ramereth Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios/ChangeLog,v 1.26 2005/11/19 23:11:41 ramereth Exp $
+
+*nagios-2.0b_p5 (19 Nov 2005)
+*nagios-1.3 (19 Nov 2005)
+
+  19 Nov 2005; Lance Albertson <ramereth@gentoo.org> +nagios-1.3.ebuild,
+  -nagios-2.0b_p1.ebuild, -nagios-2.0b_p2.ebuild, +nagios-2.0b_p5.ebuild:
+  * Version bumps
+  * Remove old ebuilds
 
 *nagios-2.0b_p4 (28 Sep 2005)
 
